--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,7 @@ colored = "3.1.1"
 num-derive = "0.4.2"
 num-traits = "0.2.19"
 strum = { version = "0.27.2", features = ["derive"] }
+thiserror = "2.0.18"
+tracing = "0.1.44"
+tracing-subscriber = "0.3.22"
 ux = "0.1.6"
